--- a/账号设置/账号设置.md
+++ b/账号设置/账号设置.md
@@ -2,4 +2,5 @@
 
 有色牛账号设置页面包括个人资料、我的VIP、我的极客币、我的订单、账号安全、消息设置等菜单。
 
-修改资料、修改密码、设置消息通知等，请点击http://my.jikexueyuan.com/setting/user/  进入账号设置进行操作。
+修改资料、修改密码、设置消息通知等，请点击[http://www.youseniu.com/](http://my.jikexueyuan.com/setting/user/)  进入账号设置进行操作。
+
