--- a/使用指南/买家.md
+++ b/使用指南/买家.md
@@ -15,7 +15,7 @@
 作为学生或刚接触IT行业的人员来说，通过对技术知识的学习来获得一个好的工作机会才是最重要的，因此建议大家可以从极客学院如下课程入手：
 
   - 基础课程  
-    基数知识用来作为日常学习的查缺补漏，但是想通过学习基础知识来达到找工作的能力是不可能的。因此基础课程只能成为大家入门的敲门砖，为日后的技术知识学习奠定基础。<br>
+    基数知识用来作为日常学习的查缺补漏，但是想通过学习基础知识来达到找工作的能力是不可能的。因此基础课程只能成为大家入门的敲门砖，为日后的技术知识学习奠定基础。  
     选择[基础类课程](http://www.jikexueyuan.com/course/)
 
   - 就业课程  
