--- a/账号设置/密码.md
+++ b/账号设置/密码.md
@@ -2,7 +2,7 @@
 
 ### 一、如何修改极客学院账号密码？
 
-1.请先登录，然后点击头像下拉菜单-账号设置。
+1.请先登录，点击头像下拉菜单-账号设置。
 
 ![](http://jiuye-res.jikexueyuan.com/others/20160921/fb9e0e3a-3bda-4a27-9aa2-9776f273c46f.png) 
 
