--- a/账号设置/用户名.md
+++ b/账号设置/用户名.md
@@ -1,6 +1,6 @@
 # 锌交易平台用户名
 
-在极客学院的一些管理系统中会使用到「锌交易平台用户名」，那么在哪里才能找到呢？
+在锌交易平台的一些管理系统中会使用到「锌交易平台用户名」，那么在哪里才能找到呢？
 
 [http://www.youseniuc.om/](http://my.jikexueyuan.com/setting/user/)
 
