--- a/服务条款.md
+++ b/服务条款.md
@@ -1,139 +1,88 @@
-# 服务条款
+## **有色牛网会员服务协议**
 
-### 欢迎您来到有色牛（www.youseniu.com）
+    有色牛网（www.youseniu.com）是有色牛（北京）网络科技有限公司运用现代互联网技术，建立的第三方再生有色金属交易的电子商务网站，为会员提供再生有色交易综合服务。本服务协议双方为会员与有色牛网所有者（以下简称平台），请您仔细阅读本注册协议，您点击"同意并继续"按钮后，本协议即构成对双方有约束力的法律文件。  
+  
+**第一条 接受条款**  
+（一）、本协议内容包括协议正文及所有平台已经发布的或将来发布的各类"其他相关规定"。"其他相关规定"为本协议不可分割的一部分，与本协议正文具有同等法律效力。
 
-​        有色牛是主要依靠网络技术，通过有色牛平台向您在线提供在线学习与移动学习服务。请您在注册和使用有色牛学习平台前仔细阅读本协议。如您不同意本协议任何条款，请勿注册账号或使用本平台。
+（二）、无论会员事实上是否在注册之前认真阅读了本协议，只要点击"同意"按钮并按照平台的注册程序成功注册为会员，会员的行为仍然表示其同意并签署了本协议。
 
-#### 一.注册协议条款的确认和接受
+（三）、会员在使用接受平台提供的服务的同时，承诺接受并遵守平台相关文件和规定。平台有权根据需要不时地制定、修改本协议或各类规则，如本协议有任何变更，将在平台网站上刊载公告。如会员不同意相关变更，必须停止使用"服务"。经修订的协议一经公布，立即自动生效，亦成为本协议的一部分。会员登录或继续接受服务，将表示会员接受经修订的协议。
 
-1. 本协议双方为北京优亿致远无线技术有限公司旗下的有色牛（以下亦称“本网站”）和有色牛注册用户。本协议阐述之条款和条件适用于有色牛（所涉域名为： www.youseniu.com）的全部学习服务，包括但不限于各种课程视频、学习内容、源代码、资料及相应服务。
+  
+**第二条 会员的权利和义务**  
+（一）、会员通过注册成平台会员，平台会为会员生成一个会员帐号。会员若发现任何非法使用会员账号或存在安全漏洞的情况，请立即通知本站。  
+（二）、会员应本着个人诚信向平台提供注册资料，须按平台要求完善会员信息，交易时还需企业营业执照、组织机构代码证、税务登记证、成交凭证等其他相关信息。会员同意其提供的注册资料真实、准确、完整、合法有效，会员注册资料如有变动的，应及时更新其注册资料。如果会员提供的注册资料不合法、不真实、不准确、不详尽的，会员需承担因此引起的相应责任及后果，并且平台保留终止会员使用平台各项服务的权利。  
+（三）会员可以自己直接在平台发布公司信息，产品的供应和求购信息，包括交易商品的主要贸易属性，包括但不限于产品名称、成分参数、货物位置、买卖方向、有效期、起订量等内容。会员也可通过电话、传真、电子邮件、微信、QQ等其他沟通方式委托平台工作人员发布，委托发布的方式同样代表会员的真实意愿。会员还可以选择匿名的方式发布供求信息。  
+（四）会员交易时间为周一~周日上午9：00~下午9：00，全天12小在线交易服务。必要时，可以由本平台决定调整交易时间或暂停交易并以公告等方式通知会员。  
+（五）会员同意，平台拥有通过邮件、短信电话等形式，向在本站注册、交易会员、收货人发送订单信息、促销活动等告知信息的权利。  
+（六）会员承诺自己在使用平台时实施的所有行为均遵守国家法律、法规和平台的相关规定以及各种社会公共利益或公共道德。遵守诚实信用的原则，不在交易过程中采取不正当竞争行为，不扰乱网上交易的正常秩序，不从事与网上交易无关的行为。如有违反导致任何法律后果的发生，会员将以自己的名义独立承担所有相应的法律责任。  
+（七）会员若将在本站注册获得的账户借给他人使用，则必须承担由此产生的全部责任，且实际使用人需承担连带责任。  
+（八）会员同意，平台有权使用会员的注册信息，登陆进入会员的注册账户，进行证据保全，包括但不限于公证、见证等。
 
-2. 有色牛同意按照本协议的规定及其不定时发布的操作规则提供基于互联网和移动网的相关服务(以下称“网络服务”)。为获得网络服务，申请人应当认真阅读、充分理解本《协议》中各条款, 包括免除或者限制本网站责任的免责条款及对用户的权利限制条款。认真阅读并选择接受或不接受本《协议》(未成年人应在法定监护人陪同下阅读)。同意接受本协议的全部条款的，申请人应当按照页面上的提示完成全部的注册程序，并在注册程序过程中点击“同意”按钮，否则视为不接受本《协议》全部条款，申请人应当终止并退出申请。
+（九）会员如选择平台进行交易撮合，寻找卖家或买家，并最终通过撮合达成交易，委托会员有义务向平台支付一定的服务费用。  
+  
+**第三条 平台的权利和义务**  
+ （一）平台有义务在现有技术上维护整个平台交易系统的正常运行，并努力提升和改进技术，使会员网上交易活动得以顺利进行。  
+ （二）平台有权决定交易日、交易时间，并另行发文公告。平台认为必要时，可由法人代表或其授权人决定临时调整交易日、交易时间或暂停交易。  
+ （三）平台对于会员在平台上的不当行为或其它任何平台认为应当终止服务的情况，有权随时作出删除相关信息、终止服务提供等处理，而无须征得会员的同意。  
+ （四）平台有权对会员的注册数据及交易行为进行查阅，发现注册数据或交易行为中存在任何问题或怀疑，均有权向会员发出询问及要求改正的通知或者直接作出删除等处理。  
+ （五）平台对会员委托发布的信息以及委托达成的交易拥有最终解释权。  
+ （六）平台对会员的注册信息和交易记录等资料负有保密义务，除法定有权机关及相关制度、规定或者为会员提供服务、为合同履行、纠纷和解等外，不得向第三方透露。否则，平台须承担相应责任。  
+ （七）对于会员在平台交易系统发布的下列各类信息，平台有权在不通知会员的前提下进行删除或采取其它限制性措施，包括但不限于：  
+ 1、以炒作信誉为目的的信息；  
+ 2、平台有理由相信存在欺诈等恶意或虚假内容的信息；  
+ 3、平台有理由相信与网上交易无关或不是以交易为目的的信息；  
+ 4、平台有理由相信存在恶意竞价或其它试图扰乱正常交易秩序因素的信息；  
+ 5、平台有理由相信该信息违反公共利益或可能严重损害平台和其它会员合法利益的；
 
-3. 注册用户在使用有色牛中的有关服务时，应承诺接受并遵守各项相关规则的规定。有色牛有权根据实际运营需要而不定时修改本协议或补充协议，如本协议有任何变更，将通过网站消息或其他方式通知用户。如注册用户不同意相关变更，则应立即终止账号使用，否则即视同用户同意并完全接受修订后的协议版本。经修订的协议一经公布于有色牛网站链接及页面，立即自动生效，亦成为本协议的一部分。注册用户登录且继续使用服务将被视为已接受修订后的协议。除书面另行声明外，任何扩大的服务范围及新增提供的内容均受本协议约束。
+（八）平台会为会员提供交易撮合服务，平台有权向委托会员收取一定的撮合服务费用。
 
-#### 二. 注册用户的权利和义务
+  
+**第四条 许可使用权**
 
-1. 用户在注册时应按照注册提示提供准确的用户名、密码及真实的联系邮箱、手机号码、真实姓名等所要求的个人资料，并及时更新注册（报名）资料，符合及时、详尽、准确的要求，用户输入的所有个人信息将被视作用户的准确身份信息。
+会员在平台交易系统发布的各类信息，会员授予平台有免费使用的权利（并有权对该权利进行再授权），平台有权（全部或部分地）使用、复制、修订或发布。
 
-2. 如果学员提供的资料包含有不正确或不良的信息，本网站保留结束学员使用网络服务资格的权利。
+  
+**第五条 服务的中断和终止**  
+**（一）、 在下列情况下，平台可以通过注销会员的方式终止服务：**  
+ 1、在会员违反本协议相关规定时，平台有权终止向会员提供服务。平台将在中断服务时通知会员。但如会员在被平台终止提供服务后，再一次直接或间接或以他人名义注册为会员的，平台有权再次单方面终止向该会员提供服务；
 
-3. 在支付课程或会员费用并经有色牛确认后，注册用户有权通过本人在有色牛的注册的账号享受相应服务。具体服务内容的时间、进度及期限以有色牛的具体课程及产品说明、公告及内容为准。
+2、平台通过会员提供的信息无法与会员取得联系时，平台有权终止向会员提供服务；
 
-4. 有色牛的注册账号只为注册用户本人所专有并仅限由其本人自己使用。一个注册账号同一时间，只能在一台终端机上登录并使用，且一个注册账号至多只能在注册用户本人所有的五台不同的终端机上登录使用。
+3、一旦平台发现会员注册数据中主要内容是虚假的，平台有权随时终止向会员提供服务；
 
-5. 未经有色牛许可，不得以任何形式向第三方转让、授权、出售有色牛课程、服务或授权第三方使用注册账号，不得以任何形式通过本站内容进行盈利活动，不得在商业环境下展映、传播本网站教学内容。
+4、本协议终止或更新时，会员明示不愿接受新的服务协议的；
 
-6. 注册用户仅对其在有色牛上享有的服务及内容有使用权，并不对该内容拥有相关知识产权。未经有色牛或其他有权第三方的许可，用户不得对包括视频、学习软件、学习资料、音频内容等在内的任何内容进行翻录、复制、发行、破解、信息网络传播或其他违反知识产权相关法律、法规的行为，否则所导致的一切民事、行政或刑事责任，由用户自行承担。
+5、平台认为其它需终止服务的情况；  
+**（二）、因会员违反法律法规或者违反本协议规定而致使平台中断、终止对会员服务的，对于服务中断、终止之前会员交易行为依下列原则处理：**
 
-7. 对于用户在有色牛中所下载任何标有有色牛所有的资料，注册用户只得根据具体的使用协议进行使用，并不拥有该产品及产品中任何内容的一切知识产权。除非经相应的产品使用协议许可，注册用户不得自行或授权他人对软件或其中的任何一部分进行复制、反编译、倒序制造、反汇编、试图推导源代码、破译、修改或创作衍生作品，因此而造成有色牛或任何第三方的损失，由用户承担全部责任。有色牛对上述侵权或违约行为保留追索的权利。
+1、服务中断、终止之前，会员已经上传至平台交易系统的货物，但尚未订立合同的，平台有权在中断、终止服务的同时删除此项货物的相关信息；
 
-8. 对于注册用户在有色牛提交的问题与笔记，注册用户同意有色牛对此内容享有复制、发行及独家的出版权。
+2、服务中断、终止之前，会员已经发出买入要约，但尚未订立合同的，平台有权在中断或终止服务的同时删除会员的相关要约；
 
-9. 注册用户应对其账号的全部使用行为承担责任，应严格遵守本协议、相关法律法规、账号及课程使用规定。未经有色牛许可，禁止用户向任何第三方提供有色牛中的任何内容或资料。
+3、服务中断、终止之前，会员已经与另一会员就具体交易订立合同的，平台可以不删除该项交易，但平台有权在中断、终止服务的同时将会员被中断或终止服务的情况通知会员的交易对方；  
+**（三）、会员资格注销后，平台有权保留会员的注册数据及以前的交易行为记录；如会员在注销前在平台交易系统上存在违法行为或违反合同的行为，平台仍可行使本协议所规定的权利。**  
+  
+**第六条 责任范围**  
+ \(一）、平台仅对本协议中列明的责任承担范围负责。
 
-10. 注册用户应自行配备上网的所需设备，包括个人电脑、调制解调器或其他必备上网装置；用户应自行负担因使用这种接入方式而产生的上网电话费、上网信息费等费用。
+\(二）、除非另有明确的书面说明,本站及其所包含的或以其它方式通过本站提供给您的全部信息、资料、货物（包括软件）和服务，均是在"按现状"和"按现有"的基础上提供的。 除非另有明确的书面说明,平台不对本站的运营及其包含在本网站上的信息、资料、货物（包括软件）和服务作任何形式的、明示或默示的声明或担保（根据中华人民共和国法律另有规定的以外）。
 
-11. 有色牛的所有服务均附期限，用户应在截止日期前享受其购买的服务。因到期服务终止所导致的任何后果，有色牛不承担任何责任。
+\(三）、因下列状况导致平台交易系统无法正常运作，使会员无法使用各项服务时，平台不承担损害赔偿责任，该状况包括但不限于：
 
-12. 注册用户的有色牛充值（包括但不限于通过网上支付、邮局汇款、银行电汇、货到付款、上门购买并现金支付、自经销商处购买听课卡等各种购买方式），一经购买都不允许任何形式的退换和退费。
+1、在平台公告之系统停机维护期间；
 
-13. 用户在账号使用过程中不得制作、复制、发布、传播含有下列内容的信息：
+2、电信设备出现故障，致使平台不能进行数据传输的；
 
-	(1) 反对宪法所确定的基本原则的；
+3、因台风、地震、海啸、洪水、停电、战争、恐怖袭击等不可抗力之因素，造成平台交易系统障碍不能执行业务的；
 
-	(2) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
+4、由于黑客攻击、电信部门技术调整或故障、网站升级、银行方面的问题等原因而造成的服务中断或者延迟；
 
-	(3) 损害国家荣誉和利益的；
+5、因上述事故造成交易或交易数据中断，恢复交易时以故障发生前系统最终记录的交易数据为有效数据。（四）、 平台公开提供的各种信息仅供会员参考，会员自行承担交易风险。  
+  
+  
 
-	(4) 煽动民族仇恨、民族歧视，破坏民族团结的；
 
-	(5) 破坏国家宗教政策，宣扬邪教和封建迷信的；
 
-	(6) 散布谣言，扰乱社会秩序，破坏社会稳定的；
 
-	(7) 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
-
-	(8) 侮辱或者诽谤他人，侵害他人合法权益的；
-
-	(9) 干扰或者侵犯有色牛的正常运行和秩序，影响其他用户正常使用的；
-
-	(10) 含有法律、行政法规禁止的其他信息内容的。
-
-14. 注册用户将自行承担注册账号使用过程中可能发生的风险和损失。
-
-15. 用户对本协议或将来的修改版本有任何异议的，或对产品服务存有异议或不满的，可以通过客服QQ（2905494756）向有色牛有关部门进行反映沟通，不得通过煽动、诋毁及通过散布其他不良信息方式进行。
-
-#### 三. 注册用户的违约责任
-
-1. 注册用户如违反本协议第二条第四款、第五款、第六款、第七款的规定，有色牛将视其情况停止注册用户所享有的服务2天至60天不等，情况及影响恶劣者，有色牛有权立即终止向其提供服务，并删除其账户信息。
-
-2. 注册用户如违反本协议第二条第十三款规定，有色牛将立即终止向其提供的服务，同时保存有关记录，并向国家有关机关报告。
-
-3. 注册用户如违反本协议约定，应赔偿所造成的有色牛全部经济损失，包括但不限于律师费、公证费、赔偿金及行政处罚金等，并承担其他法律责任。
-
-4. 注册用户因违约而导致对任何第三方的侵权或任何索赔，均应由注册用户独自并完全承担，并且注册用户应赔偿有色牛为此所遭受的全部经济损失。如该等赔偿已由有色牛清付，注册用户应立即全数（含利息）偿还，并且，注册用户应赔偿有色牛为此所遭受的经济及商誉的损失。
-
-#### 四. 有色牛的权利和义务
-
-1. 有色牛有义务通过现有技术维护有色牛的正常运行，并努力提升和改进服务使用户的学习活动得以顺利进行；由于不可抗力所导致服务的中止或终止，有色牛不对因此造成注册用户的任何损失承担责任。
-
-2. 用户在注册及使用有色牛过程中遇到的相关问题，有色牛将力争及时作出反馈。
-
-3. 如因系统维护或升级而需暂停服务时，有色牛应提前告知用户。
-
-4. 有色牛不保证其服务一定能够满足用户的全部要求，也不担保其服务不会因各种客观原因中断。
-
-#### 五. 免责条款
-
-1. 当用户所享有的服务中显示其他第三方网站或内容时，由于有色牛无法控制及审核该网站或内容，因此并不对该网站或内容真实性、有效性、合法性等效力承担责任。对于用户任何因使用或信赖该网站或内容所导致的任何直接或间接损失，有色牛均不承担任何责任。
-
-2. 由于用户将个人注册账号信息告知他人或与他人共享注册帐号的，由此导致的任何风险或损失，有色牛不对此负任何责任。
-
-3. 任何由于黑客攻击、计算机病毒侵入或发作、政府管制、硬件故障、不可抗力等非有色牛故意或严重过失而造成的用户个人资料泄露、丢失、被盗用、被篡改或服务暂定或终止的，对注册用户所造成的风险或损失，有色牛均得免责。
-
-4. 若因线路及非有色牛控制范围外的或其它不可抗力而导致暂停服务暂定或终止，所造成的一切风险与损失，有色牛不负任何责任。
-
-5. 有色牛有权根据用户的实际需求进行服务调整的权利，并有权根据实际情况调整本网站内容的售价， 由此造成的一切不便与损失，有色牛均得免责。
-
-6. 有权利删减自己的课程。
-
-#### 六. 隐私条款
-
-有色牛将严格履行用户个人隐私保密义务，承诺不公开、编辑或透露用户个人信息，
-
-但以下情况除外：
-
-1. 经用户授权透露这些信息；
-
-2. 应政府部门、法律及法规要求提供、披露相关用户个人资料；
-
-3. 在特定情况下，为竭力维护用户个人、其他社会个体和公共安全需要。
-
-#### 七. 法律
-
-本协议根据现行中华人民共和国法律法规制定并解释。如发生协议条款与中华人民共和国法律法规相抵触时，则抵触内容将按法律规定重新解释，但不影响其它条款的效力。
-
-#### 八. 解释权
-
-上述条款的解释权在法律允许的范围内归有色牛所有。
-
-#### 相关参考法律法规：
-
-1. 《全国人大常委会关于维护互联网安全的决定》
-
-2. 《互联网文化管理暂行规定（2011修订）》
-
-3. 《互联网信息服务管理办法》
-
-4. 《互联网站禁止传播淫秽、色情等不良信息自律规范》
-
-5. 《中华人民共和国侵权责任法》
-
-6. 《中华人民共和国合同法》
-
-7. 《中华人民共和国著作权法》
-
-8. 《中华人民共和国计算机软件保护条例》
-
-9. 《信息网络传播权保护条例》
