--- a/使用指南/使用指南.md
+++ b/使用指南/使用指南.md
@@ -15,7 +15,7 @@
 
 ### 业务分类
 
-针对不同阶段的用户极有色牛设计了不同的课程体系和相关课程，力求最大程度的符合不同阶段用户的学习需求。极有色牛的课程目前可以分为以下几类：
+针对不同阶段的用户有色牛设计了不同的课程体系和相关课程，力求最大程度的符合不同阶段用户的学习需求。极有色牛的课程目前可以分为以下几类：
 
 * 基础课程
 * 高级课程
