--- a/操作说明/操作说明.md
+++ b/操作说明/操作说明.md
@@ -1,24 +1,27 @@
 # 新手指南
 
-如果你还不太了解有色牛-锌买卖，那么可以看下下面的内容，它将帮助你了解自己当前所属的用户类型，好更快速的找到符合你想要的原料商品。
+如果你还不太了解有色牛-锌买卖，那么可以看下下面的内容，它将帮助你了解平台基本的操作方法，好更快速的找到符合你想要的原料商品。祝您买卖兴隆。
 
 ### 概述
 
-有色牛（有色牛北京网络科技有限公司）致力成为有色金属资源行业的综合服务商。通过互联网聚合海量客户和交易行为，为上下游客户提供高效的撮合、自营交易服务，并深耕打造有色资源行业的物流服务平台、供应链金融服务平台、第三方增值服务平台；希望一站式的解决客户的产品研发、生产、销售、物流和资金及其他服务需求，沉淀完整的行业大数据，支撑产业链的进一步创新升级。有色牛作为有色金属资源产业互联网的代表，我们将以交易和服务为入口，以大数据为手段，构建有色金属资源的全产业链生态，驱动传统产业的转型升级，提质增效
+有色牛-锌买卖
+
+
 
 ### 用户类型
 
-由于极有色牛的课程涵盖面比较广，知识结构比较完善，因此用户群也比较大。如果要把用户按照阶段进行分类的话大概为三类：
+有色牛-锌买卖的用户类型分为2类：个人认证用户和企业认证用户。用户可选择自己角色：
 
-* 卖家
-* 买家
+* 卖家（供应商）
+* 买家（采购商）
 
 ### 业务分类
 
-针对不同阶段的用户有色牛设计了不同的课程体系和相关课程，力求最大程度的符合不同阶段用户的学习需求。极有色牛的课程目前可以分为以下几类：
+针对不同的用户类型，有色牛对业务进行以下分类：
 
-* 基础课程
-* 高级课程
+* 卖家（供应商）：认证成功后可发布商品，待平台审核通过后，商品可在平台进行交易。
+
+* 买家（采购商）：认证成功后可发布询价单，待平台审核通过后，可在平台展示采购需求。
 
 
 
