--- a/操作说明/操作说明.md
+++ b/操作说明/操作说明.md
@@ -4,7 +4,7 @@
 
 ### 概述
 
-有色牛-锌买卖
+有色牛-锌买卖，为再生有色资源行业提供高效真实的撮合、自营交易服务平台。并深耕打造再生有色资源行业的物流服务平台、供应链金融服务平台、第三方增值服务平台；通过一站式的供应链服务解决再生有色资源企业的资源回收利用、产品研发、生产、采销、物流和资金等方面的问题，沉淀完整的行业大数据，支撑产业链的进一步创新升级。
 
 ### 用户类型
 
