--- a/操作说明/注册说明.md
+++ b/操作说明/注册说明.md
@@ -7,7 +7,9 @@
 
 * 点击“立即注册”后，弹出消息框提示“注册成功，即将跳转到用户信息列表”。接下来完善用户信息后并确认，会员注册完成。![](/assets/注册3.png)
 
-* ### 会员注册完成界面提示可以发布供求消息及查看平台所示信息![](/assets/indexlogo.png)
+* 注册成功后，进行用户认证，选择认证方式，填写认证信息，提交后由后台人员进行审核。![](/assets/认证2.png)
+
+* ### 会员认证成功后可以发布供求消息及查看平台所示信息![](/assets/认证3.png)
 
 
 
