修改询价单和商品图片路径

--- a/操作说明/发布商品.md
+++ b/操作说明/发布商品.md
@@ -4,12 +4,12 @@
 
  
 
-![img](file:///C:/Users/zhangjin/AppData/Local/Temp/msohtmlclip1/01/clip_image002.jpg)
+![](/assets/发商品1.png)
 
  
 
 2、输入相关数据，预览后点击提交，待平台审核通过后商品会展示在平台中。
 
-![img](file:///C:/Users/zhangjin/AppData/Local/Temp/msohtmlclip1/01/clip_image004.jpg)
+![](/assets/发商品2.png)
 
-![img](file:///C:/Users/zhangjin/AppData/Local/Temp/msohtmlclip1/01/clip_image006.jpg)
+![](/assets/发商品3.png)
