--- a/操作说明/发布询价单.md
+++ b/操作说明/发布询价单.md
@@ -4,11 +4,11 @@
 
 1、已认证用户登录系统，点击右上角加号，点击“发布询价单”
 
-![img](file:///C:/Users/zhangjin/AppData/Local/Temp/msohtmlclip1/01/clip_image002.jpg)
+![](/assets/询价单1.png)
 
 2、输入相关数据，点击提交，待平台审核后进行匹配商品。
 
-![img](file:///C:/Users/zhangjin/AppData/Local/Temp/msohtmlclip1/01/clip_image003.png)
+![](/assets/询价单2.png)
 
  
 
