--- a/法律声明.md
+++ b/法律声明.md
@@ -5,6 +5,7 @@
 若要访问和使用有色牛网电子商务网站，您应当完全接受本协议中所包含的协议、条件和有色牛网即时刊登的公告，并且遵守有关互联网及/或本平台的相关法律、规定与规则。一旦您访问、使用了有色牛网，即表示您同意并接受了所有该等协议、条件及公告。
 
  **免责声明**
+
 ​     任何会员因使用本平台而可能遭致的意外及其造成的损失(包括黑客攻击、计算机病毒侵入或发作、因政府管制而造成的暂时性关闭等影响网络正常经营的不可抗力而造成的损失及因下载本平台可能链接到的第三方网站内容而感染电脑病毒等)，我们对此概不负责，亦不承担任何法律责任。
 
 会员应对使用有色牛网获得的信息结果自行承担风险。有色牛网仅作为一个促进再生有色交易、提供再生有色供求信息展示交流的平台，平台会员会自行上传资源信息，我们不保证信息的合理性、准确性和完整性，且不对信息内容的安全性、准确性、真实性、合法性负责，也不承担任何法律责任。
@@ -18,17 +19,19 @@
 ​    
 
 **有色牛网会员服务协议**
-  
+
 ​     有色牛网（www.youseniu.com）是有色牛（北京）网络科技有限公司运用现代互联网技术，建立的第三方再生有色金属交易的电子商务网站，为会员提供再生有色交易综合服务。本服务协议双方为会员与有色牛网所有者（以下简称平台），请您仔细阅读本注册协议，您点击"同意并继续"按钮后，本协议即构成对双方有约束力的法律文件。
-  
+
  **第一条 接受条款**
- （一）、本协议内容包括协议正文及所有平台已经发布的或将来发布的各类"其他相关规定"。"其他相关规定"为本协议不可分割的一部分，与本协议正文具有同等法律效力。
+
+（一）、本协议内容包括协议正文及所有平台已经发布的或将来发布的各类"其他相关规定"。"其他相关规定"为本协议不可分割的一部分，与本协议正文具有同等法律效力。
 
 （二）、无论会员事实上是否在注册之前认真阅读了本协议，只要点击"同意"按钮并按照平台的注册程序成功注册为会员，会员的行为仍然表示其同意并签署了本协议。
 
 （三）、会员在使用接受平台提供的服务的同时，承诺接受并遵守平台相关文件和规定。平台有权根据需要不时地制定、修改本协议或各类规则，如本协议有任何变更，将在平台网站上刊载公告。如会员不同意相关变更，必须停止使用"服务"。经修订的协议一经公布，立即自动生效，亦成为本协议的一部分。会员登录或继续接受服务，将表示会员接受经修订的协议。 
 
  **第二条 会员的权利和义务** 
+
  （一）、会员通过注册成平台会员，平台会为会员生成一个会员帐号。会员若发现任何非法使用会员账号或存在安全漏洞的情况，请立即通知本站。 
  （二）、会员应本着个人诚信向平台提供注册资料，须按平台要求完善会员信息，交易时还需企业营业执照、组织机构代码证、税务登记证、成交凭证等其他相关信息。会员同意其提供的注册资料真实、准确、完整、合法有效，会员注册资料如有变动的，应及时更新其注册资料。如果会员提供的注册资料不合法、不真实、不准确、不详尽的，会员需承担因此引起的相应责任及后果，并且平台保留终止会员使用平台各项服务的权利。
  （三）会员可以自己直接在平台发布公司信息，产品的供应和求购信息，包括交易商品的主要贸易属性，包括但不限于产品名称、成分参数、货物位置、买卖方向、有效期、起订量等内容。会员也可通过电话、传真、电子邮件、微信、QQ等其他沟通方式委托平台工作人员发布，委托发布的方式同样代表会员的真实意愿。会员还可以选择匿名的方式发布供求信息。 
@@ -41,6 +44,7 @@
 （九）、会员如选择平台进行交易撮合，寻找卖家或买家，并最终通过撮合达成交易，委托会员有义务向平台支付一定的服务费用。
 
  **第三条 平台的权利和义务**
+
  （一）、平台有义务在现有技术上维护整个平台交易系统的正常运行，并努力提升和改进技术，使会员网上交易活动得以顺利进行。 
  （二）、平台有权决定交易日、交易时间，并另行发文公告。平台认为必要时，可由法人代表或其授权人决定临时调整交易日、交易时间或暂停交易。 
  （三）、平台对于会员在平台上的不当行为或其它任何平台认为应当终止服务的情况，有权随时作出删除相关信息、终止服务提供等处理，而无须征得会员的同意。 
@@ -61,7 +65,8 @@
 会员在平台交易系统发布的各类信息，会员授予平台有免费使用的权利（并有权对该权利进行再授权），平台有权（全部或部分地）使用、复制、修订或发布。 
 
  **第五条 服务的中断和终止**
- **（一）、 在下列情况下，平台可以通过注销会员的方式终止服务：**
+
+**（一）、 在下列情况下，平台可以通过注销会员的方式终止服务：**
  1、在会员违反本协议相关规定时，平台有权终止向会员提供服务。平台将在中断服务时通知会员。但如会员在被平台终止提供服务后，再一次直接或间接或以他人名义注册为会员的，平台有权再次单方面终止向该会员提供服务；
 
 2、平台通过会员提供的信息无法与会员取得联系时，平台有权终止向会员提供服务；
@@ -72,17 +77,19 @@
 
 5、平台认为其它需终止服务的情况；
 
-#####  （二）、因会员违反法律法规或者违反本协议规定而致使平台中断、终止对会员服务的，对于服务中断、终止之前会员交易行为依下列原则处理：
+##### （二）、因会员违反法律法规或者违反本协议规定而致使平台中断、终止对会员服务的，对于服务中断、终止之前会员交易行为依下列原则处理：
 
 1、服务中断、终止之前，会员已经上传至平台交易系统的货物，但尚未订立合同的，平台有权在中断、终止服务的同时删除此项货物的相关信息；
 
 2、服务中断、终止之前，会员已经发出买入要约，但尚未订立合同的，平台有权在中断或终止服务的同时删除会员的相关要约；
 
 3、服务中断、终止之前，会员已经与另一会员就具体交易订立合同的，平台可以不删除该项交易，但平台有权在中断、终止服务的同时将会员被中断或终止服务的情况通知会员的交易对方；
- **（三）、会员资格注销后，平台有权保留会员的注册数据及以前的交易行为记录；如会员在注销前在平台交易系统上存在违法行为或违反合同的行为，平台仍可行使本协议所规定的权利。**
+
+**（三）、会员资格注销后，平台有权保留会员的注册数据及以前的交易行为记录；如会员在注销前在平台交易系统上存在违法行为或违反合同的行为，平台仍可行使本协议所规定的权利。**
 
 **第六条 责任范围**
- (一）、平台仅对本协议中列明的责任承担范围负责。
+
+(一）、平台仅对本协议中列明的责任承担范围负责。
 
 (二）、除非另有明确的书面说明,本站及其所包含的或以其它方式通过本站提供给您的全部信息、资料、货物（包括软件）和服务，均是在"按现状"和"按现有"的基础上提供的。 除非另有明确的书面说明,平台不对本站的运营及其包含在本网站上的信息、资料、货物（包括软件）和服务作任何形式的、明示或默示的声明或担保（根据中华人民共和国法律另有规定的以外）。
 
@@ -96,16 +103,24 @@
 
 4、由于黑客攻击、电信部门技术调整或故障、网站升级、银行方面的问题等原因而造成的服务中断或者延迟；
 
-5、因上述事故造成交易或交易数据中断，恢复交易时以故障发生前系统最终记录的交易数据为有效数据。（四）、 平台公开提供的各种信息仅供会员参考，会员自行承担交易风险。
+5、因上述事故造成交易或交易数据中断，恢复交易时以故障发生前系统最终记录的交易数据为有效数据。
+
+(四）、 平台公开提供的各种信息仅供会员参考，会员自行承担交易风险。
+
+
 
 **隐私声明**
+
 ​     我们以本隐私声明对访问者隐私保护的许诺。以下文字公开我平台（youseniu.com）对信息收集和使用的情况。本平台的隐私声明正在不断改进中，随着我平台服务范围的扩大，我们会随时更新我们的隐私声明。我们欢迎您随时回来查看本声明。通过service@youseniu.com反馈您的意见。
 
 在同意有色牛网会员服务协议（"协议"）之时，您已经同意我们按照本隐私声明来使用和披露您的个人信息。本隐私声明的全部协议属于该协议的一部份。 
+
  **一、信息的收集**
+
 ​     会员在匿名状态下即可访问本平台获取信息。本公司仅在与再生有色交易有关的合法目的下，并经会员同意，以合法的方式收集必要的会员个人资料。本平台有可能根据收集到的会员姓名、地址、电话号码、电子邮件等信息向会员发送免费的信息宣传资料，或根据会员留下的真实有效的联系方式主动向会员发起呼叫，与会员联系。由于会员自行处置宣传信息或不接听我方电话而可能遭受的损失，我公司概不承担责任。会员在本平台注册时，须依注册内容之提示提供会员本人及单位的真实、准确、完整信息，并保证个人及单位资料的及时更新。因会员提供个人及单位信息不准确、不完整或未及时更新而可能遭受的任何损害，本公司不承担任何责任。因会员提供个人及单位信息不准确、不完整或未及时更新给本公司造成损失的，本公司保留追偿的权利。
 
 二、**信息的披露和使用**
+
 ​     我们不会向任何无关第三方提供，出售，出租，分享和交易会员的个人信息，除非获得您的同意。
 
 您同意我们可批露或使用您的个人信息以用于识别和（或）确认您的身份，或解决争议，或有助于确保平台安全、限制欺诈、非法或其他刑事犯罪活动，以执行我们的服务协议。
@@ -119,10 +134,13 @@
 当我们被法律强制或依照政府或依权利人因识别涉嫌侵权行为人的要求而提供您的信息时，我们将善意地披露您的资料。 
 
  **三、外部链接** 
+
 ​     本站会含有到其他平台的链接。有色牛网对那些平台的隐私保护措施不负任何责任。我们可能在任何需要的时候增加商业伙伴或共用品牌的平台。
 
  **四、安全** 
+
 ​     我们平台有相应的安全措施来确保我们掌握的信息不丢失，不被滥用和变造。这些安全措施包括向其它服务器备份数据。尽管我们有这些安全措施，但请注意在因特网上不存在"完善的安全措施"。
 
   **五、联系我们**
+
 ​     如果您对本隐私声明或有色牛网的隐私保护措施以及您在使用中的问题有任何意见和建议请和我们联系：service@youseniu.com
