--- a/常见问题.md
+++ b/常见问题.md
@@ -1,27 +1,71 @@
-# 常见问题
+## 常见问题
 
-## 我已经支付成功，在哪里学习购买的课程？
+一、账号问题
 
-如果您购买的是 **职业学院** 的课程，可以到[「学习中心 - 我的职业」](http://xue.jikexueyuan.com/zhiye)中学习；
+1.如何注册“有色牛”账号
 
-如果您购买的是 **就业班** 课程，可以到[「学习中心 - 我的就业班」](http://xue.jikexueyuan.com/jiuye)前往学习；
+1.1在页面右上角找到注册入口，点击“免费注册”
 
-如果您购买的是 VIP 会员，可以在[会员课程](http://www.jikexueyuan.com/course/)中观看课程，观看记录可前往[「学习中心 - 我的课程」](http://xue.jikexueyuan.com/ke/doing)查看。
+![](C:/git/github/help/assets/%E6%B3%A8%E5%86%8C1.png)
 
-## 为什么我的极客币不能使用？
+1.2输入正确的手机号码，填写验证码；
 
-有几种情况可能导致您的极客币无法使用：
+![](C:/git/github/help/assets/%E6%B3%A8%E5%86%8C2.png)
 
-1. 极客币仅可用于购买「职业学院」的课程，不可用于购买 VIP 会员和其他内容。
+1.3注册完成；
 
+![](C:/git/github/help/assets/%E6%B3%A8%E5%86%8C3.png)
 
-2. 在您的订单中有 **待支付** 订单占用了极客币，此时极客币处于冻结状态，到[「账号设置 - 我的订单」](http://my.jikexueyuan.com/setting/order/)中取消订单，即可释放被冻结的极客币。
+2.如何登录
 
+2.1进入有色牛网站，点击右上方“登录”按钮；
 
-## 账户扣款已经成功，为什么交易没成功？
+![](C:/git/github/help/assets/%E7%99%BB%E5%BD%951.png)
 
-可能由于网络繁忙原因到账延迟，请不用担心，系统会重新核实，一般在第二个工作日晚上 18:00 自动到账 。 
+2.2密码登录，填写正确的用户名及密码点击“登录”；
 
-## 重复扣款怎么办？
+![](C:/git/github/help/assets/%E7%99%BB%E5%BD%952.png)
 
-您可以联系极客学院客服，安排退款。客服电话：400-6788-266
+3.手机为什么收不到验证码
+
+如果您的手机收不到校验码，可尝试操作以下方法：
+ (3.1)使用的手机号码不在服务区，信号弱，或欠费，建议您优先排查下。
+ (3.2)浏览器问题，可以更换浏览器在试。
+ (3.3)点击重新发送。
+ 如以上方法均不可以，请您致电客服热线010-53654002或联系在线客服进行咨询。
+
+4.登录密码忘记怎么办？
+
+登录界面点击“忘记密码”，手机找回；
+
+![](C:/git/github/help/assets/%E5%BF%98%E8%AE%B0%E5%AF%86%E7%A0%811.png)
+
+![](C:/git/github/help/assets/%E5%BF%98%E8%AE%B0%E5%AF%86%E7%A0%812.png)
+
+5.会员如何进行实名认证
+
+5.1登录有色牛账号，进入“我的-实名认证”；
+
+![](C:/git/github/help/assets/%E8%AE%A4%E8%AF%810.png)
+
+5.2按照要求填写详细信息，带“\”为必填项
+
+![](C:/git/github/help/assets/%E8%AE%A4%E8%AF%811.png)
+
+5.3点击“提交”，平台进行审核，审核周期：壹个工作日；
+
+![](C:/git/github/help/assets/%E8%AE%A4%E8%AF%812.png)
+
+6.如何修改会员资料
+
+登录有色牛，进入到“我的--设置—会员资料”界面，修改相关信息并保存。
+
+注意：6.1认证之前，会员名称、联系方式等信息可以修改。 
+
+​        6.2 认证之后，不能随便修改。如需修改，需要发送《用户信息变更申请表》至平台服务邮箱（service@youseniu.com），由平台客服操作。 
+
+7.会员如何修改登录密码
+
+登录“有色牛”平台，进入“我的-设置-修改密码”点击“修改”完成相应操作；
+
+![](C:/git/github/help/assets/%E4%BF%AE%E6%94%B9%E5%AF%86%E7%A0%811.png)
