--- a/常见问题.md
+++ b/常见问题.md
@@ -6,25 +6,25 @@
 
 1.1在页面右上角找到注册入口，点击“免费注册”
 
-![](C:/git/github/help/assets/%E6%B3%A8%E5%86%8C1.png)
+![](/assets/注册1.png)
 
 1.2输入正确的手机号码，填写验证码；
 
-![](C:/git/github/help/assets/%E6%B3%A8%E5%86%8C2.png)
+![](/assets/注册2.png)
 
 1.3注册完成；
 
-![](C:/git/github/help/assets/%E6%B3%A8%E5%86%8C3.png)
+![](/assets/注册3.png)
 
 2.如何登录
 
 2.1进入有色牛网站，点击右上方“登录”按钮；
 
-![](C:/git/github/help/assets/%E7%99%BB%E5%BD%951.png)
+![](/assets/登录1.png)
 
 2.2密码登录，填写正确的用户名及密码点击“登录”；
 
-![](C:/git/github/help/assets/%E7%99%BB%E5%BD%952.png)
+![](/assets/登录2.png)
 
 3.手机为什么收不到验证码
 
@@ -38,23 +38,23 @@
 
 登录界面点击“忘记密码”，手机找回；
 
-![](C:/git/github/help/assets/%E5%BF%98%E8%AE%B0%E5%AF%86%E7%A0%811.png)
+![](/assets/忘记密码1.png)
 
-![](C:/git/github/help/assets/%E5%BF%98%E8%AE%B0%E5%AF%86%E7%A0%812.png)
+![](/assets/忘记密码2.png)
 
 5.会员如何进行实名认证
 
 5.1登录有色牛账号，进入“我的-实名认证”；
 
-![](C:/git/github/help/assets/%E8%AE%A4%E8%AF%810.png)
+![](/assets/认证0.png)
 
 5.2按照要求填写详细信息，带“\”为必填项
 
-![](C:/git/github/help/assets/%E8%AE%A4%E8%AF%811.png)
+![](/assets/认证1.png)
 
 5.3点击“提交”，平台进行审核，审核周期：壹个工作日；
 
-![](C:/git/github/help/assets/%E8%AE%A4%E8%AF%812.png)
+![](/assets/认证2.png)
 
 6.如何修改会员资料
 
@@ -68,4 +68,4 @@
 
 登录“有色牛”平台，进入“我的-设置-修改密码”点击“修改”完成相应操作；
 
-![](C:/git/github/help/assets/%E4%BF%AE%E6%94%B9%E5%AF%86%E7%A0%811.png)
+![](/assets/修改密码1.png)
