--- a/会员帮助.md
+++ b/会员帮助.md
@@ -35,7 +35,7 @@
 (3.2)浏览器问题，可以更换浏览器在试。
 
 (3.3)点击重新发送。
- 如以上方法均不可以，请您致电客服热线010-53654002或联系在线客服进行咨询。
+ 如以上方法均不可以，请您致电客服热线400-998-1860或联系在线客服进行咨询。
 
 4.登录密码忘记怎么办？
 
@@ -143,7 +143,9 @@
 
 5.为什么要完善商品属性
 
-5.1.有助于客户搜索信息时，第一时间了解产品细节，方便产品对比，快速找到目标客户 5.2.供求详细页面全面展示，让客户一目了然，减少沟通成本,促成交易
+5.1.有助于客户搜索信息时，第一时间了解产品细节，方便产品对比，快速找到目标客户
+
+5.2.供求详细页面全面展示，让客户一目了然，减少沟通成本,促成交易
 
  
 
