--- a/常见问题.md
+++ b/常见问题.md
@@ -35,7 +35,7 @@
 (3.2)浏览器问题，可以更换浏览器在试。
 
 (3.3)点击重新发送。
- 如以上方法均不可以，请您致电客服热线010-53654002或联系在线客服进行咨询。
+ 如以上方法均不可以，请您致电客服热线400-998-1860或联系在线客服进行咨询。
 
 4.登录密码忘记怎么办？
 
