--- a/操作说明/注册说明.md
+++ b/操作说明/注册说明.md
@@ -3,7 +3,7 @@
 * ### 会员注册
 * 在页面右上角好到注册入口，点击“免费注册”。![](/assets/注册1.png)
 
-* 据您的情况，详细填写页面中的各项内容。当您在填写某个内容框时，下方会出现填写要求。为了保证账号安全，请您输入您的手机号码，进行验证，您的手机很快会收到到一条验证码短信，请您将短信中的验证码输入此框中。（注意：若您很久都没有收到短信，可能是短信系统尚未支持该号段，建议换个号码试试，或者致电客服010-53654002进行咨询。）
+* 据您的情况，详细填写页面中的各项内容。当您在填写某个内容框时，下方会出现填写要求。为了保证账号安全，请您输入您的手机号码，进行验证，您的手机很快会收到到一条验证码短信，请您将短信中的验证码输入此框中。（注意：若您很久都没有收到短信，可能是短信系统尚未支持该号段，建议换个号码试试，或者致电客服400-998-1860进行咨询。）
 
 ![](/assets/注册2.png)
 
