--- a/服务协议.md
+++ b/服务协议.md
@@ -76,5 +76,7 @@
 
 4、由于黑客攻击、电信部门技术调整或故障、网站升级、银行方面的问题等原因而造成的服务中断或者延迟；
 
-5、因上述事故造成交易或交易数据中断，恢复交易时以故障发生前系统最终记录的交易数据为有效数据。（四）、 平台公开提供的各种信息仅供会员参考，会员自行承担交易风险。
+5、因上述事故造成交易或交易数据中断，恢复交易时以故障发生前系统最终记录的交易数据为有效数据。
+
+（四）、 平台公开提供的各种信息仅供会员参考，会员自行承担交易风险。
 
