--- a/会员帮助.md
+++ b/会员帮助.md
@@ -51,7 +51,7 @@
 
 ![](/assets/认证0.png)
 
-5.2按照要求填写详细信息，带“\”为必填项
+5.2按照要求填写详细信息，带“*”为必填项
 
 ![](/assets/认证1.png)
 
@@ -133,7 +133,7 @@
 
 ![](/assets/发商品1.png)
 
-4.2在货品页面，添加详细商品信息，带“\”为必填项。商品信息填写完毕后，点击“确认发布”；
+4.2在货品页面，添加详细商品信息，带“*”为必填项。商品信息填写完毕后，点击“确认发布”；
 
 ![](/assets/发商品2.png)
 
