修改内容为锌源网

--- a/交易流程.md
+++ b/交易流程.md
@@ -1,4 +1,4 @@
-## 有色牛网站交易流程及说明（附件）
+## 锌源网交易流程及说明（附件）
 
  
 
@@ -14,7 +14,7 @@
 
 **2**、买方提交订单
 
-买方通过有色牛网站选择购买的货物品类、编号、数量后，即可线上确认提交订单。
+买方通过锌源网选择购买的货物品类、编号、数量后，即可线上确认提交订单。
 
 **3**、签订合同
 
@@ -22,10 +22,10 @@
 
 **4**、订单支付及货款托管
 
-采购商（买方）成功提交订单后，按有色牛网站规定时间内支付足额货款到网站指定银行账户进行托管，供应商（卖方）通过网站平台账户或网站提醒信息能查询和知晓，即视为采购商（买方）付款成功，供应商（卖方）应即供货。
+采购商（买方）成功提交订单后，按锌源网规定时间内支付足额货款到网站指定银行账户进行托管，供应商（卖方）通过网站平台账户或网站提醒信息能查询和知晓，即视为采购商（买方）付款成功，供应商（卖方）应即供货。
 
 **5**、确认收货及结算
 
-采购商（买方）收货后，双方按照实际供货情况进行货品确认，在确认后，采购商（买方）通过网站进行收货确认，有色牛网站按照双方最终实际情况进行最后的货款结算。
+采购商（买方）收货后，双方按照实际供货情况进行货品确认，在确认后，采购商（买方）通过网站进行收货确认，锌源网按照双方最终实际情况进行最后的货款结算。
 
  
