--- a/会员帮助.md
+++ b/会员帮助.md
@@ -2,7 +2,7 @@
 
 一、账号问题
 
-1.如何注册“有色牛”账号
+1.如何注册“锌源网”账号
 
 1.1在页面右上角找到注册入口，点击“免费注册”
 
@@ -18,7 +18,7 @@
 
 2.如何登录
 
-2.1进入有色牛网站，点击右上方“登录”按钮；
+2.1进入“锌源网”网站，点击右上方“登录”按钮；
 
 ![](/assets/登录1.png)
 
@@ -47,7 +47,7 @@
 
 5.会员如何进行实名认证
 
-5.1登录有色牛账号，进入“我的-实名认证”；
+5.1登录锌源网账号，进入“我的-实名认证”；
 
 ![](/assets/认证0.png)
 
@@ -61,7 +61,7 @@
 
 6.如何修改会员资料
 
-登录有色牛，进入到“我的--设置—会员资料”界面，修改相关信息并保存。
+登录锌源网，进入到“我的--设置—会员资料”界面，修改相关信息并保存。
 
 注意：6.1认证之前，会员名称、联系方式等信息可以修改。 
 
@@ -69,7 +69,7 @@
 
 7.会员如何修改登录密码
 
-登录“有色牛”平台，进入“我的-设置-修改密码”点击“修改”完成相应操作；
+登录“锌源网”平台，进入“我的-设置-修改密码”点击“修改”完成相应操作；
 
 ![](/assets/修改密码1.png)
 
@@ -77,7 +77,7 @@
 
 1.找到所需商品如何下单
 
-1.1登录“有色牛”平台，进入撮合大厅，查找所需商品；
+1.1登录“锌源网”平台，进入撮合大厅，查找所需商品；
 
 1.2 进入商品“详情”，点击“订单”；
 
@@ -91,7 +91,7 @@
 
 4.下单后如何支付？
 
-4.1登录有色牛平台，进入“我的-订单管理”，找到需要支付的订单“选择支付方式”
+4.1登录锌源网平台，进入“我的-订单管理”，找到需要支付的订单“选择支付方式”
 
 4.2进入到支付界面，选择线上支付或线下支付
 
@@ -103,7 +103,7 @@
 
 5.如何选择想要采购的商品信息
 
-5.1登录有色牛界面，在界面左上角点击商品品类，选择所需商品；
+5.1登录锌源网界面，在界面左上角点击商品品类，选择所需商品；
 
 5.2如未找到所需商品，可联系线上客服进行咨询，由平台进行撮合服务；
 
@@ -121,15 +121,15 @@
 
 2.如何下架货品
 
-登录有色牛账号，进入“我的-我的发布”商品管理，点击“下架”即可；
+登录锌源网账号，进入“我的-我的发布”商品管理，点击“下架”即可；
 
 3.如何收款
 
-登录有色牛账号，如会员在线上交易，会员可以在“我的-订单管理”中，点击收款，货款会由平安银行转入会员绑定的银行卡；
+登录锌源网账号，如会员在线上交易，会员可以在“我的-订单管理”中，点击收款，货款会由平安银行转入会员绑定的银行卡；
 
 4.如何发布商品信息
 
-4.1登录有色牛账号，进入“我的-商品管理-添加商品”；
+4.1登录锌源网账号，进入“我的-商品管理-添加商品”；
 
 ![](/assets/发商品1.png)
 
@@ -147,13 +147,9 @@
 
 5.2.供求详细页面全面展示，让客户一目了然，减少沟通成本,促成交易
 
- 
-
 6.发布信息的有效期
 
-   登录有色牛账户，进入“我的-编辑商品”会员自行选择商品信息有效期（一天、三天、七天、十天）；
-
- 
+   登录锌源网账户，进入“我的-编辑商品”会员自行选择商品信息有效期（一天、三天、七天、十天）；
 
 7.如何发布优质的商品信息，吸引更多的客户联系您
 
@@ -167,13 +163,9 @@
 
 7.5.完善公司信息，提高您的诚信值，吸引更多买家或卖家找上门；
 
- 
-
 8.为什么我发布的信息不能马上再平台看到
 
 因为发布的供应信息必须经过我们工作人员的审核通过后才会出现在网站上，一般信息发布以后，我们的工作人员会在24小时内对该信息进行审核， 如果审核通过了，这条信息才能在撮合大厅、分类、搜索中显示出来，请耐心等待。如果审核未通过，您可以随时到“ 我的—商品管理”中根据退回原因进行修改，再次发布。
-
- 
 
 9.上传图片应该注意什么
 
@@ -183,9 +175,7 @@
 
 9.3．图片必须是您自己产品的图片，不允许拷贝他人图片。 
 
-9.4．建议有色牛会员，同一条供求信息同样的图片不要重复发布，不利于您的产品展示。 
-
-
+9.4．建议锌源网会员，同一条供求信息同样的图片不要重复发布，不利于您的产品展示。 
 
 10.为什么显示审核未通过
 
