--- a/操作说明/操作说明.md
+++ b/操作说明/操作说明.md
@@ -1,21 +1,21 @@
 # 操作说明
 
-如果你还不太了解有色牛-锌买卖，那么可以看下下面的内容，它将帮助你了解平台基本的操作方法，好更快速的找到符合你想要的原料商品。祝您买卖兴隆。
+如果你还不太了解有色牛-锌源网，那么可以看下下面的内容，它将帮助你了解平台基本的操作方法，好更快速的找到符合你想要的原料商品。祝您买卖兴隆。
 
 ### 概述
 
-有色牛-锌买卖，为再生有色资源行业提供高效真实的撮合、自营交易服务平台。并深耕打造再生有色资源行业的物流服务平台、供应链金融服务平台、第三方增值服务平台；通过一站式的供应链服务解决再生有色资源企业的资源回收利用、产品研发、生产、采销、物流和资金等方面的问题，沉淀完整的行业大数据，支撑产业链的进一步创新升级。
+有色牛-锌源网，为再生有色资源行业提供高效真实的撮合、自营交易服务平台。并深耕打造再生有色资源行业的物流服务平台、供应链金融服务平台、第三方增值服务平台；通过一站式的供应链服务解决再生有色资源企业的资源回收利用、产品研发、生产、采销、物流和资金等方面的问题，沉淀完整的行业大数据，支撑产业链的进一步创新升级。
 
 ### 用户类型
 
-有色牛-锌买卖的用户类型分为2类：个人认证用户和企业认证用户。用户可选择自己角色：
+有色牛-锌源网的用户类型分为2类：个人认证用户和企业认证用户。用户可选择自己角色：
 
 * 卖家（供应商）
 * 买家（采购商）
 
 ### 业务分类
 
-针对不同的用户类型，有色牛对业务进行以下分类：
+针对不同的用户类型，锌源网对业务进行以下分类：
 
 * 卖家（供应商）：认证成功后可发布商品，待平台审核通过后，商品可在平台进行交易。
 
