--- a/服务协议.md
+++ b/服务协议.md
@@ -1,6 +1,6 @@
-## **有色牛网会员服务协议**
+## **锌源网会员服务协议**
 
-有色牛网（www.youseniu.com）是有色牛（北京）网络科技有限公司运用现代互联网技术，建立的第三方再生有色金属交易的电子商务网站，为会员提供再生有色交易综合服务。本服务协议双方为会员与有色牛网所有者（以下简称平台），请您仔细阅读本注册协议，您点击"同意并继续"按钮后，本协议即构成对双方有约束力的法律文件。  
+锌源网（www.youseniu.com）是有色牛（北京）网络科技有限公司运用现代互联网技术，建立的第三方再生有色金属交易的电子商务网站，为会员提供再生有色交易综合服务。本服务协议双方为会员与锌源网所有者（以下简称平台），请您仔细阅读本注册协议，您点击"同意并继续"按钮后，本协议即构成对双方有约束力的法律文件。  
 
 **第一条 接受条款**  
 （一）、本协议内容包括协议正文及所有平台已经发布的或将来发布的各类"其他相关规定"。"其他相关规定"为本协议不可分割的一部分，与本协议正文具有同等法律效力。
@@ -62,7 +62,7 @@
 **（三）、会员资格注销后，平台有权保留会员的注册数据及以前的交易行为记录；如会员在注销前在平台交易系统上存在违法行为或违反合同的行为，平台仍可行使本协议所规定的权利。**
 
 **第六条 责任范围**  
- \(一）、平台仅对本协议中列明的责任承担范围负责。
+(一）、平台仅对本协议中列明的责任承担范围负责。
 
 \(二）、除非另有明确的书面说明,本站及其所包含的或以其它方式通过本站提供给您的全部信息、资料、货物（包括软件）和服务，均是在"按现状"和"按现有"的基础上提供的。 除非另有明确的书面说明,平台不对本站的运营及其包含在本网站上的信息、资料、货物（包括软件）和服务作任何形式的、明示或默示的声明或担保（根据中华人民共和国法律另有规定的以外）。
 
