--- a/法律声明.md
+++ b/法律声明.md
@@ -2,13 +2,13 @@
 
  
 
-若要访问和使用有色牛网电子商务网站，您应当完全接受本协议中所包含的协议、条件和有色牛网即时刊登的公告，并且遵守有关互联网及/或本平台的相关法律、规定与规则。一旦您访问、使用了有色牛网，即表示您同意并接受了所有该等协议、条件及公告。
+若要访问和使用锌源网电子商务网站，您应当完全接受本协议中所包含的协议、条件和锌源网即时刊登的公告，并且遵守有关互联网及/或本平台的相关法律、规定与规则。一旦您访问、使用了锌源网，即表示您同意并接受了所有该等协议、条件及公告。
 
  **免责声明**
 
 ​     任何会员因使用本平台而可能遭致的意外及其造成的损失(包括黑客攻击、计算机病毒侵入或发作、因政府管制而造成的暂时性关闭等影响网络正常经营的不可抗力而造成的损失及因下载本平台可能链接到的第三方网站内容而感染电脑病毒等)，我们对此概不负责，亦不承担任何法律责任。
 
-会员应对使用有色牛网获得的信息结果自行承担风险。有色牛网仅作为一个促进再生有色交易、提供再生有色供求信息展示交流的平台，平台会员会自行上传资源信息，我们不保证信息的合理性、准确性和完整性，且不对信息内容的安全性、准确性、真实性、合法性负责，也不承担任何法律责任。
+会员应对使用锌源网获得的信息结果自行承担风险。锌源网仅作为一个促进再生有色交易、提供再生有色供求信息展示交流的平台，平台会员会自行上传资源信息，我们不保证信息的合理性、准确性和完整性，且不对信息内容的安全性、准确性、真实性、合法性负责，也不承担任何法律责任。
 
 任何单位或个人认为通过本平台网页内容可能涉嫌侵犯其著作权，应该及时向我们提出书面权利通知，并提供身份证明、权属证明及详细侵权情况证明。我们收到上述法律文件后，将会依法尽快处理。
 
@@ -18,9 +18,9 @@
  本声明未涉及的问题参见国家有关法律法规，当本声明与国家法律法规冲突时，以国家法律法规为准。
 ​    
 
-**有色牛网会员服务协议**
+**锌源网会员服务协议**
 
-​     有色牛网（www.youseniu.com）是有色牛（北京）网络科技有限公司运用现代互联网技术，建立的第三方再生有色金属交易的电子商务网站，为会员提供再生有色交易综合服务。本服务协议双方为会员与有色牛网所有者（以下简称平台），请您仔细阅读本注册协议，您点击"同意并继续"按钮后，本协议即构成对双方有约束力的法律文件。
+​     锌源网（www.youseniu.com）是有色牛（北京）网络科技有限公司运用现代互联网技术，建立的第三方再生有色金属交易的电子商务网站，为会员提供再生有色交易综合服务。本服务协议双方为会员与锌源网所有者（以下简称平台），请您仔细阅读本注册协议，您点击"同意并继续"按钮后，本协议即构成对双方有约束力的法律文件。
 
  **第一条 接受条款**
 
@@ -132,7 +132,7 @@
 
 ​     我们以本隐私声明对访问者隐私保护的许诺。以下文字公开我平台（youseniu.com）对信息收集和使用的情况。本平台的隐私声明正在不断改进中，随着我平台服务范围的扩大，我们会随时更新我们的隐私声明。我们欢迎您随时回来查看本声明。通过service@youseniu.com反馈您的意见。
 
-在同意有色牛网会员服务协议（"协议"）之时，您已经同意我们按照本隐私声明来使用和披露您的个人信息。本隐私声明的全部协议属于该协议的一部份。 
+在同意锌源网会员服务协议（"协议"）之时，您已经同意我们按照本隐私声明来使用和披露您的个人信息。本隐私声明的全部协议属于该协议的一部份。 
 
 **一、信息的收集**
 
@@ -154,7 +154,7 @@
 
 **三、外部链接** 
 
-​     本站会含有到其他平台的链接。有色牛网对那些平台的隐私保护措施不负任何责任。我们可能在任何需要的时候增加商业伙伴或共用品牌的平台。
+​     本站会含有到其他平台的链接。锌源网对那些平台的隐私保护措施不负任何责任。我们可能在任何需要的时候增加商业伙伴或共用品牌的平台。
 
 **四、安全** 
 
@@ -162,4 +162,4 @@
 
  **五、联系我们**
 
-​     如果您对本隐私声明或有色牛网的隐私保护措施以及您在使用中的问题有任何意见和建议请和我们联系：service@youseniu.com
+​     如果您对本隐私声明或锌源网的隐私保护措施以及您在使用中的问题有任何意见和建议请和我们联系：service@youseniu.com
