--- a/常见问题.md
+++ b/常见问题.md
@@ -2,7 +2,7 @@
 
 一、账号问题
 
-1.如何注册“有色牛”账号
+1.如何注册“锌源网”账号
 
 1.1在页面右上角找到注册入口，点击“免费注册”
 
@@ -18,7 +18,7 @@
 
 2.如何登录
 
-2.1进入有色牛网站，点击右上方“登录”按钮；
+2.1进入锌源网网站，点击右上方“登录”按钮；
 
 ![](/assets/登录1.png)
 
@@ -47,7 +47,7 @@
 
 5.会员如何进行实名认证
 
-5.1登录有色牛账号，进入“我的-实名认证”；
+5.1登录锌源网账号，进入“我的-实名认证”；
 
 ![](/assets/认证0.png)
 
@@ -61,7 +61,7 @@
 
 6.如何修改会员资料
 
-登录有色牛，进入到“我的--设置—会员资料”界面，修改相关信息并保存。
+登录锌源网，进入到“我的--设置—会员资料”界面，修改相关信息并保存。
 
 注意：6.1认证之前，会员名称、联系方式等信息可以修改。 
 
@@ -69,6 +69,6 @@
 
 7.会员如何修改登录密码
 
-登录“有色牛”平台，进入“我的-设置-修改密码”点击“修改”完成相应操作；
+登录“锌源网”平台，进入“我的-设置-修改密码”点击“修改”完成相应操作；
 
 ![](/assets/修改密码1.png)
