--- a/操作说明/用户名.md
+++ b/操作说明/用户名.md
@@ -1,10 +1,10 @@
-# 锌交易平台用户名
+# 锌源网平台用户名
 
-在锌交易平台的一些管理系统中会使用到「锌交易平台用户名」，那么在哪里才能找到呢？
+在锌源网平台的一些管理系统中会使用到「锌源网平台用户名」，那么在哪里才能找到呢？
 
-http://www.youseniuc.om/
+http://www.youseniu.com/
 
-访问上面的链接，就会出现如下图所示，其中红色框就是「锌交易平台用户名」。
+访问上面的链接，就会出现如下图所示，其中红色框就是「锌源网平台用户名」。
 
-![](http://com-4jplus-temp.qiniudn.com/2016/08/2016-09-21-account1.png)
+![](/assets/用户名1.png)
 
