--- a/服务协议.md
+++ b/服务协议.md
@@ -1,57 +1,57 @@
-# **锌源网会员服务协议**
+**锌源网会员服务协议**
 
 锌源网（www.xinyuan.biz）是有色牛（北京）网络科技有限公司运用现代互联网技术，建立的第三方有色金属交易的电子商务平台（以下简称“平台”），为会员提供锌金属交易的综合服务。本服务协议双方为会员与锌源网主办方，请您仔细阅读本注册协议，您点击”同意并继续”按钮后，本协议即构成对双方有约束力的法律文件。
 
  
 
 **第一条** **接受条款**
-（一）、本协议内容包括协议正文及所有平台已经发布的或将来发布的各类”其他相关规定”。”其他相关规定”为本协议不可分割的一部分，与本协议正文具有同等法律效力。
+ （一）本协议内容包括协议正文及所有平台已经发布的或将来发布的各类”其他相关规定”。”其他相关规定”为本协议不可分割的一部分，与本协议正文具有同等法律效力。
 
-（二）、无论会员事实上是否在注册之前认真阅读了本协议，只要点击”同意”按钮并按照平台的注册程序成功注册为会员，会员的行为仍然表示其同意并签署了本协议。
+（二）无论会员事实上是否在注册之前认真阅读了本协议，只要点击”同意”按钮并按照平台的注册程序成功注册为会员，会员的行为仍然表示其同意并签署了本协议。
 
-（三）、会员在使用接受平台提供服务的同时，承诺接受并遵守平台相关文件和规定。平台有权根据需要不时地制定、修改本协议或各类规则，如本协议有任何变更，将在平台网站上刊载公告。如会员不同意相关变更，必须停止接受平台服务。经修订的协议一经公布，立即自动生效，亦成为本协议的一部分。会员登录或继续接受服务，将表示会员接受经修订的协议。 
+（三）会员在使用接受平台提供服务的同时，承诺接受并遵守平台相关文件和规定。平台有权根据需要不时地制定、修改本协议或各类规则，如本协议有任何变更，将在平台网站上刊载公告。如会员不同意相关变更，必须停止接受平台服务。经修订的协议一经公布，立即自动生效，亦成为本协议的一部分。会员登录或继续接受服务，将表示会员接受经修订的协议。 
 
 
  **第二条** **会员的权利和义务** 
-（一）、会员通过注册成平台会员，平台会为会员生成一个会员帐号。会员的对注册生成的会员名和密码具有保密义务，不得向任何第三方透漏，否则，自行承担由此导致的一切损失。会员若发现任何非法使用会员账号或存在安全漏洞的情况，请立即通知本站。任何人员对未经会员同意盗用本网站会员账号和密码致使会员遭受损失时将承担一切法律责任。 
-（二）、会员应本着个人诚信向平台提供注册资料，须按平台要求完善会员信息，交易时还需提供企业营业执照、组织机构代码证、税务登记证、成交凭证等其他相关信息。会员保证其提供的注册资料真实、准确、完整、合法有效，会员注册资料如有变动的，应及时更新其注册资料。如果会员提供的注册资料不合法、不真实、不准确、不详尽的，会员需承担因此引起的相应责任及后果，并且平台保留终止会员使用平台各项服务的权利。
-（三）会员可以自己直接在平台发布公司信息，产品的供应和求购信息，包括交易商品的主要贸易属性，包括但不限于产品名称、成分参数、货物位置、买卖方向、有效期、起订量等内容。会员也可通过电话、传真、电子邮件、微信、QQ等其他沟通方式委托平台工作人员发布，委托发布的方式同样代表会员的真实意愿。
+ （一）会员通过注册成平台会员，平台会为会员生成一个会员帐号。会员的对注册生成的会员名和密码具有保密义务，不得向任何第三方透漏，否则，自行承担由此导致的一切损失。会员若发现任何非法使用会员账号或存在安全漏洞的情况，请立即通知本站。任何人员对未经会员同意盗用本网站会员账号和密码致使会员遭受损失时将承担一切法律责任。 
+ （二）会员应本着个人诚信向平台提供注册资料，须按平台要求完善会员信息，交易时还需提供企业营业执照、组织机构代码证、税务登记证、成交凭证等其他相关信息。会员保证其提供的注册资料真实、准确、完整、合法有效，会员注册资料如有变动的，应及时更新其注册资料。如果会员提供的注册资料不合法、不真实、不准确、不详尽的，会员需承担因此引起的相应责任及后果，并且平台保留终止会员使用平台各项服务的权利。
+ （三）会员可以自己直接在平台发布公司信息，产品的供应和求购信息，包括交易商品的主要贸易属性，包括但不限于产品名称、成分参数、货物位置、买卖方向、有效期、起订量等内容。会员也可通过电话、传真、电子邮件、微信、QQ等其他沟通方式委托平台工作人员发布，委托发布的方式同样代表会员的真实意愿。
 
 （四）会员交易时间为周一~周日上午9：00~下午9：00，全天12小时在线交易服务。必要时，可以由本平台决定调整交易时间或暂停交易并以公告等方式通知会员。
-（五）会员同意：平台拥有通过邮件、短信电话等形式，向在本站注册、交易会员、收货人发送订单信息、促销活动等告知信息的权利。 
-（六）会员承诺自己在使用平台时实施的所有行为均遵守国家法律、法规和平台的相关规定以及各种社会公共利益或公共道德。遵守诚实信用的原则，不在交易过程中采取不正当竞争行为、欺诈行为、不扰乱网上交易的正常秩序，不从事与网上交易无关的行为、不得从事违反法律法规的任何活动。如有违反导致任何法律后果的发生，会员将独立承担全部法律责任。 
-（七）会员若将在本站注册获得的账户借给他人使用，则必须承担由此产生的全部责任，且实际使用人需承担连带责任。 
-（八）会员同意，平台有权使用会员的注册信息，登陆进入会员的注册账户，进行包括但不限于公证、见证、取证、提供信息资料等；以及进行系统调试、研发、测试。
+ （五）会员同意：平台拥有通过邮件、短信电话等形式，向在本站注册、交易会员、收货人发送订单信息、促销活动等告知信息的权利。 
+ （六）会员承诺自己在使用平台时实施的所有行为均遵守国家法律、法规和平台的相关规定以及各种社会公共利益或公共道德。遵守诚实信用的原则，不在交易过程中采取不正当竞争行为、欺诈行为、不扰乱网上交易的正常秩序，不从事与网上交易无关的行为、不得从事违反法律法规的任何活动。如有违反导致任何法律后果的发生，会员将独立承担全部法律责任。 
+ （七）会员若将在本站注册获得的账户借给他人使用，则必须承担由此产生的全部责任，且实际使用人需承担连带责任。 
+ （八）会员同意，平台有权使用会员的注册信息，登陆进入会员的注册账户，进行包括但不限于公证、见证、取证、提供信息资料等；以及进行系统调试、研发、测试。
 
  
 
 **第三条** **平台的权利和义务**
-（一）、平台有义务在现有技术上维护整个平台交易系统的正常运行，并努力提升和改进技术，使会员网上交易活动得以顺利进行。 
-（二）、平台有权决定交易日、交易时间，并另行发文公告。平台认为必要时，可由法人代表或其授权人决定临时调整交易日、交易时间或暂停交易。 
-（三）、平台对于会员在平台上的不当行为或其它任何平台认为应当终止服务的情况，有权随时作出删除相关信息、终止服务提供等处理，而无须征得会员的同意。 
-（四）、平台有权对会员的注册数据及交易行为进行查阅，发现注册数据或交易行为中存在任何问题或存在合理怀疑，均有权向会员发出询问及要求改正的通知或者直接作出删除等处理。 
-（五）、平台对会员委托发布的信息以及委托达成的交易拥有最终解释权。 
-（六）、平台对会员的注册信息和交易记录等资料负有保密义务，除法定有权机关及相关制度、规定或者为会员提供服务、为合同履行、纠纷和解等外，不得向第三方透露。否则，平台须承担相应责任。 
-（七）、对于会员在平台交易系统发布的下列各类信息，平台有权在不通知会员的前提下进行删除或采取其它限制性措施，包括但不限于：
-1、以炒作信誉为目的的信息；
-2、平台有理由相信存在欺诈等恶意或虚假内容的信息； 
-3、平台有理由相信与网上交易无关或不是以交易为目的的信息； 
-4、平台有理由相信存在恶意竞价或其它试图扰乱正常交易秩序因素的信息； 
-5、平台有理由相信该信息违反公共利益或可能严重损害平台和其它会员合法利益的；
+ （一）平台有义务在现有技术上维护整个平台交易系统的正常运行，并努力提升和改进技术，使会员网上交易活动得以顺利进行。 
+ （二）平台有权决定交易日、交易时间，并另行发文公告。平台认为必要时，可由法人代表或其授权人决定临时调整交易日、交易时间或暂停交易。 
+ （三）平台对于会员在平台上的不当行为或其它任何平台认为应当终止服务的情况，有权随时作出删除相关信息、终止服务提供等处理，而无须征得会员的同意。 
+ （四）平台有权对会员的注册数据及交易行为进行查阅，发现注册数据或交易行为中存在任何问题或存在合理怀疑，均有权向会员发出询问及要求改正的通知或者直接作出删除等处理。 
+ （五）平台对会员委托发布的信息以及委托达成的交易拥有最终解释权。 
+ （六）平台对会员的注册信息和交易记录等资料负有保密义务，除法定有权机关及相关制度、规定或者为会员提供服务、为合同履行、纠纷和解等外，不得向第三方透露。否则，平台须承担相应责任。 
+ （七）对于会员在平台交易系统发布的下列各类信息，平台有权在不通知会员的前提下进行删除或采取其它限制性措施，包括但不限于：
+ 1、以炒作信誉为目的的信息；
+ 2、平台有理由相信存在欺诈等恶意或虚假内容的信息； 
+ 3、平台有理由相信与网上交易无关或不是以交易为目的的信息； 
+ 4、平台有理由相信存在恶意竞价或其它试图扰乱正常交易秩序因素的信息； 
+ 5、平台有理由相信该信息违反公共利益或可能严重损害平台和其它会员合法利益的；
 
 （八）平台会为会员提供交易撮合服务，平台有权向委托平台撮合交易的会员收取一定的服务费。
 
 （九）双方约定如下：在平台上销售方展示的货物、价格仅仅是交易信息的发布，只有销售方收到您的订单信息，并签订合法有效的合同后，才视为您与销售方之间建立了合法有效的交易关系；
 
 
- **第四条** **许可使用权**
+  **第四条** **许可使用权**
 
-会员在平台交易系统发布的各类信息，会员授予平台有免费使用的权利（并有权对该权利进行再授权），平台有权（全部或部分）使用、复制、修订或发布。
+​    会员在平台交易系统发布的各类信息，会员授予平台有免费使用的权利（并有权对该权利进行再授权），平台有权（全部或部分）使用、复制、修订或发布。
 
-
-**第五条** **服务的中断和终止**
-（一）、 在下列情况下，平台可以通过注销会员的方式终止服务：
-1、在会员违反本协议相关规定时，平台有权终止向会员提供服务。平台将在中断服务时通知会员。但如会员在被平台终止提供服务后，再一次直接或间接或以他人名义注册为会员的，平台有权再次单方面终止向该会员提供服务；
+ 
+ **第五条** **服务的中断和终止**
+ （一）在下列情况下，平台可以通过注销会员的方式终止服务：
+ 1、在会员违反本协议相关规定时，平台有权终止向会员提供服务。平台将在中断服务时通知会员。但如会员在被平台终止提供服务后，再一次直接或间接或以他人名义注册为会员的，平台有权再次单方面终止向该会员提供服务；
 
 2、平台通过会员提供的信息无法与会员取得联系时，平台有权终止向该会员提供服务；
 
@@ -60,20 +60,20 @@
 4、本协议终止或更新时，会员明示不愿接受新的服务协议的；
 
 5、平台认为其它需终止服务的情况；
-（二）、因会员违反法律法规或者违反本协议规定而致使平台中断、终止对会员服务的，对于服务中断、终止之前会员交易行为依下列原则处理：
+ （二）因会员违反法律法规或者违反本协议规定而致使平台中断、终止对会员服务的，对于服务中断、终止之前会员交易行为依下列原则处理：
 
 1、服务中断、终止之前，会员已经上传至平台交易系统的货物，但尚未订立合同的，平台有权在中断、终止服务的同时删除此项货物的相关信息；
 
 2、服务中断、终止之前，会员已经发出买入要约，但尚未订立合同的，平台有权在中断或终止服务的同时删除会员的相关要约；
 
 3、服务中断、终止之前，会员已经与另一会员就具体交易订立合同的，平台可以不删除该项交易，但平台有权在中断、终止服务的同时将会员被中断或终止服务的情况通知会员的交易对方；
-（三）、会员资格注销后，平台有权保留会员的注册数据及以前的交易行为记录；如会员在注销前在平台交易系统上存在违法行为或违反合同的行为，平台仍可行使本协议所规定的权利。
+ （三）会员资格注销后，平台有权保留会员的注册数据及以前的交易行为记录；如会员在注销前在平台交易系统上存在违法行为或违反合同的行为，平台仍可行使本协议所规定的权利。
+ 
+ **第六条** **责任范围**
 
-**第六条** **责任范围**
+（一）除非另有明确的书面说明,本站及其所包含的或以其它方式通过本站提供给您的全部信息、资料、货物（包括软件）和服务，均是在”按现状”和”按现有”的情况提供的。 除非另有明确的书面说明,平台不对本站的运营及其包含在本网站上的信息、资料、货物（包括软件）和服务作任何形式的、明示或默示的声明或担保、保证、承诺等（根据中华人民共和国法律另有规定的以外）。
 
-（一）、除非另有明确的书面说明,本站及其所包含的或以其它方式通过本站提供给您的全部信息、资料、货物（包括软件）和服务，均是在”按现状”和”按现有”的情况提供的。 除非另有明确的书面说明,平台不对本站的运营及其包含在本网站上的信息、资料、货物（包括软件）和服务作任何形式的、明示或默示的声明或担保、保证、承诺等（根据中华人民共和国法律另有规定的以外）。
-
-（二）、因下列状况导致平台交易系统无法正常运作，使会员无法使用各项服务时，平台不承担损害赔偿责任，该状况包括但不限于：
+（二）因下列状况导致平台交易系统无法正常运作，使会员无法使用各项服务时，平台不承担损害赔偿责任，该状况包括但不限于：
 
 1、在平台公告之系统停机维护期间；
 
@@ -85,7 +85,7 @@
 
 5、因上述事故造成交易或交易数据中断，恢复交易时以故障发生前系统最终记录的交易数据为有效数据。
 
-（三）、平台公开提供的各种信息仅供会员参考，会员自行承担交易风险。
+（三）平台公开提供的各种信息仅供会员参考，会员自行承担交易风险。
 
  
 
