--- a/服务协议.md
+++ b/服务协议.md
@@ -1,4 +1,4 @@
-**锌源网会员服务协议**
+# 锌源网会员服务协议
 
 锌源网（www.xinyuan.biz）是有色牛（北京）网络科技有限公司运用现代互联网技术，建立的第三方有色金属交易的电子商务平台（以下简称“平台”），为会员提供锌金属交易的综合服务。本服务协议双方为会员与锌源网主办方，请您仔细阅读本注册协议，您点击”同意并继续”按钮后，本协议即构成对双方有约束力的法律文件。
 
